# music_cleaning

./: .gitignore  README.md  custom_stft.ipynb  data_creation_test.ipynb  old_code.ipynb  parser.ipynb  plan.txt  pyproject.toml  stft_test.ipynb
.devcontainer/: Dockerfile  devcontainer.json
test_data/Ojebokoren_ThatsEntertainment_Full/: Readme.txt
