[project]
name = "music-cleaning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "bs4>=0.0.2",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
